Routes and Stations

--- a/app/views/homepage/show.html.erb
+++ b/app/views/homepage/show.html.erb
@@ -5,3 +5,6 @@
   <%= scenic_route.description %>
 
 <% end %>
+
+<p><%= link_to "Routes", routes_path %></p>
+<p><%= link_to "Stations", stations_path %></p>
