--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Route#index</h1>
-<p>Find me in app/views/route/index.html.erb</p>
+<%= link_to "New Route", new_route_path %>
+
+<% @routes.each do |route| %>
+  <%= link_to route.name, route %>
+<% end %>
