--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -1,15 +1,7 @@
-<<<<<<< HEAD
 <h1>Route#index</h1>
 
 <%= link_to 'add route', new_route_path %>
 
 <% @routes.each do |route| %>
-  <%= link_to route.id, route %>
+  <%= link_to route.short_name, route %>
 <% end %>
-=======
-<%= link_to "New Route", new_route_path %>
-
-<% @routes.each do |route| %>
-  <%= link_to route.name, route %>
-<% end %>
->>>>>>> 4746cd7812d62800f8f8cf4550045a842110b07a
