Admin interface for scenic route parts

--- a/app/views/scenic_routes/show.html.erb
+++ b/app/views/scenic_routes/show.html.erb
@@ -1,3 +1,11 @@
 <h1><%= @scenic_route.name %></h1>
 
 <%= @scenic_route.description %>
+
+<% @scenic_route.scenic_route_parts.all.each do |part| %>
+  <% route = part.route %>
+
+  <%= route.start_station.name %>
+
+
+<% end %>
