get vois from routes

--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -1,7 +1,19 @@
 <h1>Route #<%= @route.id %></h1>
 
+<p>
 From: <%= link_to @route.start_station.name, @route.start_station %>
 To: <%= link_to @route.end_station.name, @route.end_station %>
+</p>
+<p>
+<%= @route.vois.each do |voi| %>
+  <%= link_to voi.to_s, voi %>
+<% end %>
 
+</p>
+
+<p>
+From: <%= link_to @route.end_station.name, @route.end_station %>
+To: <%= link_to @route.start_station.name, @route.start_station %>
+</p>
 
 <%= link_to 'edit', edit_route_path(@route) %>
