adding end station to json

--- a/app/views/stations/_form.html.erb
+++ b/app/views/stations/_form.html.erb
@@ -4,6 +4,10 @@
     <%= form.text_field :name, :placeholder => "Name", :required => true %>
   </div>
 
+  <div>
+    <%= form.text_field :csr, :placeholder => "CSR code" %>
+  </div>
+
   <fieldset>
     <legend>Location</legend>
     <%= form.text_field :lat, :placeholder => "Latitude", :required => true %>
