--- a/app/assets/stylesheets/layout.css.erb
+++ b/app/assets/stylesheets/layout.css.erb
@@ -50,8 +50,17 @@ a {
   color: #777;
 }
 
+h1 {
+  text-align: center;
+  margin: 0 0 .5em 0;
+}
+
 h2 {
   margin: 0 0 .2em 0;
+}
+
+.meta {
+  margin: .8em 0 0 2em;
 }
 
 p {
