--- a/app/assets/stylesheets/layout.css.erb
+++ b/app/assets/stylesheets/layout.css.erb
@@ -66,3 +66,16 @@ h2 {
 p {
   margin: 0 0 1em 0;
 }
+
+h1 em {
+  font-weight: normal;
+}
+
+.reverse {
+  float: left;
+  display: block;
+  background-color: #B4CDCD;
+  padding: .3em .6em;
+  color: #FFF;
+  font-size: 18px;
+}
