--- a/app/views/reverse/show.html.erb
+++ b/app/views/reverse/show.html.erb
@@ -10,7 +10,7 @@
     <h2 class="voi"><%= link_to poi.name, poi_path(poi) %></h2>
 
     <div class="meta">
-      <p>Visible on the <em><%= voi.left_side? ? "left" : "right" %></em>.</p>
+      <p>Visible on the <em><%= voi.left_side? ? "right" : "left" %></em>.</p>
 
       <p class="description"><%= poi.description %></p>
     </div>
