--- a/app/views/scenic_routes/show.html.erb
+++ b/app/views/scenic_routes/show.html.erb
@@ -29,3 +29,5 @@
 
 <% end %>
 <%#= link_to 'new section', new_scenic_route_part_path(@scenic_route) %>
+
+<%= link_to "Map", scenic_route_map_path(@scenic_route) %>
